--- a/index4.html
+++ b/index4.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+php<!DOCTYPE html>
 <html>
 <head>
     <meta charset='utf-8'>
@@ -6,6 +6,8 @@
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style4.css'>
+    <script src='ping.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.min.js"></script>
     
 </head>
 <body>
