--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,9 @@
     <title>CHAR SELECT</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style3.css'>
-    <script src='main3.js'></script>
+    <script src='ping.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.min.js"></script>
+
 </head>
 <body>
     <div class="text">
@@ -14,7 +16,7 @@
     </div>
     <div class="CharSelect">
         <a href="index4.html"><img src="images/piziselect.png" alt="SELECT CHAR 1!" style="width:auto; height:auto;"></a>
-        <a href="index4.html"><img src="images/jigobselect.png" alt="SELECT CHAR 2!" style="width:auto; height:auto;"></a>
+        <a href="index6.html" id="Gplayer"><img src="images/jigobselect.png" alt="SELECT CHAR 2!" style="width:auto; height:auto;"></a>
     </div>
 </body>
 </html>
