--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script> 
-    <title>PLAYER</title>
+    <title>TITLE</title>
 </head>
 <body>
     <img src="images/titlePobP.png" alt="GameTitle" class="center">
