--- a/index3.html
+++ b/index3.html
@@ -6,15 +6,24 @@
     <title>CHAR SELECT</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style3.css'>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src='main3.js'></script>
+
+   
 </head>
 <body>
     <div class="text">
         <img src="/images/chooseurcharactertext.png" alt="charselect">
-    </div>
-    <div class="CharSelect">
+    </div class>
+    <div class="charList">
+    <span class="CharSelect1">
         <a href="index4.html"><img src="images/piziselect.png" alt="SELECT CHAR 1!" style="width:auto; height:auto;"></a>
+    </span>
+    <span class="CharSelect2">
         <a href="index4.html"><img src="images/jigobselect.png" alt="SELECT CHAR 2!" style="width:auto; height:auto;"></a>
+    </span>
     </div>
+    <img src="images/cursor.gif" class="paddleCursor">
+    <img src="images/cursor.gif" class="paddleCursor2">
 </body>
 </html>
