flawed but able to shoot

--- a/index5.html
+++ b/index5.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <!-- <script src='main.js'></script>  -->
-    <title>Sorry</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='ping1.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.min.js"></script>
 </head>
 <body>
-    <p style="font-family: Comic Sans MS; size: 200px;">CONTINUED IN THE SEQUEL, SORRY!</p>
-    <a href="index.html" style="size:"><button>Shamelessly low quality back button</button></a>
-    
+
 </body>
 </html>
